# firment-example-esp

./: .gitignore  CMakeLists.txt  bootstrap-ubuntu.sh  generate.sh  sdkconfig
.github/workflows/: ci.yml
components/fmt_base/: CMakeLists.txt
components/fmt_queue/: CMakeLists.txt
components/fmt_queue/inc/: queue.h
main/: CMakeLists.txt  firment_example_main.c
